Adde UMAMI-Tracking

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html  >
 <head>
-  
+  <script defer src="https://analytics.albertshofer.net/script.js" data-website-id="4ecda3df-0560-4fe7-b2b4-54a7b665a3ca"></script>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
