--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/favicon-128x128-1.png" type="image/x-icon">
   <meta name="description" content="architektur. design .fotografie.">
-  
+  <script defer src="https://analytics.albertshofer.net/script.js" data-website-id="4ecda3df-0560-4fe7-b2b4-54a7b665a3ca"></script>
   
   <title>Michael Albertshofer</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
